--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -10,13 +10,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_height="200dp"
             android:background="@drawable/user_background"
             android:gravity="center"
             android:orientation="vertical">
@@ -39,6 +38,7 @@
                 android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/user_introduction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -49,16 +49,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
             <LinearLayout
+                android:id="@+id/information"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp">
 
                 <ImageView
                     android:layout_width="30dp"
@@ -71,22 +73,19 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="left|center"
+                    android:paddingLeft="15dp"
                     android:text="个人信息" />
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="right|center"
-                    android:src="@drawable/right" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/connect"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp">
 
                 <ImageView
                     android:layout_width="30dp"
@@ -99,21 +98,19 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="left|center"
+                    android:paddingLeft="15dp"
                     android:text="联系我们" />
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="right|center"
-                    android:src="@drawable/right" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/about"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp">
 
                 <ImageView
                     android:layout_width="30dp"
@@ -126,18 +123,18 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="left|center"
+                    android:paddingLeft="15dp"
                     android:text="关于我们" />
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="right|center"
-                    android:src="@drawable/right" />
             </LinearLayout>
 
             <Button
-                android:layout_width="match_parent"
+                android:id="@+id/btn_quit"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
                 android:text="退出登陆" />
 
         </LinearLayout>
