--- a/app/src/main/res/layout/weibo_recyclerview.xml
+++ b/app/src/main/res/layout/weibo_recyclerview.xml
@@ -86,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:imgGap="4dp"
             app:showStyle="fill"
             app:singleImgSize="120dp" />
