添加图片压缩，保证上传图片不会太大，导致OOM

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,8 @@
         android:id="@+id/bottom_navigationbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"/>
 
-    </com.ashokvarma.bottomnavigation.BottomNavigationBar>
 
 
 </RelativeLayout>
