--- a/app/src/main/res/layout/weibo_recyclerview.xml
+++ b/app/src/main/res/layout/weibo_recyclerview.xml
@@ -51,7 +51,7 @@
                         android:id="@+id/weibo_time"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:gravity="center_vertical" />
 
                     <TextView
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="未关注"
-                android:visibility="invisible" />
+                android:visibility="gone" />
         </LinearLayout>
 
         <TextView
@@ -86,10 +86,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:visibility="visible"
-            app:imgGap="4dp"
-            app:showStyle="fill"
+            app:imgGap="3dp"
+            app:showStyle="grid"
             app:singleImgSize="120dp" />
+        <!--<GridView
+            android:id="@+id/blogGirdView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:gravity="center"
+            android:numColumns="3" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
