添加融云即时通讯

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,17 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.zuofa.summer.fragment.HomeFragment">
 
-    <!--<com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
-        android:id="@+id/mPullRecyclerView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>-->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mRecycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/mRecycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
